--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,27 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+bin/cdk.context.json
+cdk.context.json
+
+.idea/
+
+# dependencies
+node_modules
+
+# sst
+.sst
+.build
+
+# opennext
+.open-next
+
+# misc
+.DS_Store
+
+# local env files
+.env*.local
+
+.idea/
+.vscode/
